# kshim

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  bootstrap.py  kshim.cpp  kshim.h  kshimdata.cpp  kshimdata.h  main.cpp  test_filesystem.cpp
src/: CMakeLists.txt  config.h.in  kshim.cpp  kshim.h  kshim_unix.cpp  kshim_win.cpp  kshimdata.cpp  kshimdata.h  kshimpath.cpp  kshimpath.h  kshimstring.h  main.cpp  main_unix.cpp  main_win.cpp
src/3dparty/: CMakeLists.txt
src/kshim/: CMakeLists.txt  kshimmain.cpp  kshimmain.h  main_unix.cpp  main_win.cpp
src/kshimgen/: CMakeLists.txt  kshimgen.cpp  kshimgen.h  kshimgen_p.h  kshimgen_unix.cpp  kshimgen_unix_objcopy.cpp  kshimgen_win.cpp  main_unix.cpp  main_win.cpp
src/libkshimgen/: CMakeLists.txt  config.h.in  kshim.cpp  kshim.h  kshim_unix.cpp  kshim_win.cpp  kshimdata.cpp  kshimdata.h  kshimpath.cpp  kshimpath.h  kshimstring.h
tests/: CMakeLists.txt  binaryName_test.cpp  createShim_test.cpp  path_test.cpp  test_config.h.in
tests/helper/: dump_args.cpp
