add_executable(kshimgen kshimgen.cpp)
if (WIN32)
    target_sources(kshimgen PRIVATE main_win.cpp kshimgen_win.cpp)
else()
    if (OFF)
    target_sources(kshimgen PRIVATE main_unix.cpp kshimgen_unix.cpp)
    else ()
        target_sources(kshimgen PRIVATE main_unix.cpp kshimgen_unix_objcopy.cpp)
    endif()
endif()
target_link_libraries(kshimgen PRIVATE libkshimgen kshim_embedded_resource)

install(TARGETS kshimgen RUNTIME DESTINATION bin)
