add_executable(kshimgen kshimgen.cpp)
if (WIN32)
    target_sources(kshimgen PRIVATE main_win.cpp kshimgen_win.cpp)
else()
    target_sources(kshimgen PRIVATE main_unix.cpp kshimgen_unix.cpp)
    set(KSHIM_MULTI_ARCH_COUNT 1)
    if (APPLE AND CMAKE_OSX_ARCHITECTURES)
        list(LENGTH CMAKE_OSX_ARCHITECTURES KSHIM_MULTI_ARCH_COUNT)
    endif()
    target_compile_definitions(kshimgen PRIVATE KSHIM_MULTI_ARCH_COUNT=${KSHIM_MULTI_ARCH_COUNT})
endif()
target_link_libraries(kshimgen PRIVATE libkshimgen kshim_embedded_resource)

install(TARGETS kshimgen RUNTIME DESTINATION bin)
